--- a/app/src/main/res/layout-land/layout.xml
+++ b/app/src/main/res/layout-land/layout.xml
@@ -115,13 +115,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="50dp"
             android:gravity="center_horizontal"
             android:text="@string/command" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
@@ -230,7 +230,31 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/fullyDressed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fullyDressed"
+                android:onClick="fullyDressedClicked"/>
+
+            <Button
+                android:id="@+id/potato"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/potato"
+                android:onClick="potatoClicked"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 
 </LinearLayout>
+
