--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,93 +12,94 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:gravity="center_horizontal">
 
         <ImageView
             android:id="@+id/body"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="visible"
             android:contentDescription="@string/bodydesc"
             app:srcCompat="@drawable/body" />
 
         <ImageView
             android:id="@+id/arms"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             android:contentDescription="@string/armsdesc"
             app:srcCompat="@drawable/arms" />
 
         <ImageView
             android:id="@+id/ears"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             android:contentDescription="@string/earsdesc"
             app:srcCompat="@drawable/ears" />
 
         <ImageView
             android:id="@+id/eyebrows"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             android:contentDescription="@string/eyebrowsdesc"
             app:srcCompat="@drawable/eyebrows" />
 
         <ImageView
             android:id="@+id/eyes"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             android:contentDescription="@string/eyesdesc"
             app:srcCompat="@drawable/eyes" />
 
         <ImageView
             android:id="@+id/glasses"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             android:contentDescription="@string/glassesdesc"
             app:srcCompat="@drawable/glasses" />
 
         <ImageView
             android:id="@+id/hat"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             android:contentDescription="@string/hatdesc"
             app:srcCompat="@drawable/hat" />
 
         <ImageView
             android:id="@+id/mouth"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             android:contentDescription="@string/mouthdesc"
             app:srcCompat="@drawable/mouth" />
 
         <ImageView
             android:id="@+id/mustache"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             android:contentDescription="@string/mustachedesc"
             app:srcCompat="@drawable/mustache" />
 
         <ImageView
             android:id="@+id/nose"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             android:contentDescription="@string/nosedesc"
             app:srcCompat="@drawable/nose" />
 
         <ImageView
             android:id="@+id/shoes"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             android:contentDescription="@string/shoesdesc"
             app:srcCompat="@drawable/shoes" />
@@ -109,13 +110,16 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:text="@string/command"
+        android:textStyle="bold"
         android:gravity="center_horizontal"/>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:orientation="horizontal"
         android:gravity="center_horizontal" >
 
@@ -129,45 +133,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/arms"
-                android:onClick="Clicked"
-                tools:layout_editor_absoluteX="34dp"
-                tools:layout_editor_absoluteY="331dp" />
+                android:onClick="Clicked" />
 
             <CheckBox
                 android:id="@+id/earsBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/ears"
-                android:onClick="Clicked"
-                tools:layout_editor_absoluteX="34dp"
-                tools:layout_editor_absoluteY="331dp" />
+                android:onClick="Clicked" />
 
             <CheckBox
                 android:id="@+id/eyebrowsBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/eyebrows"
-                android:onClick="Clicked"
-                tools:layout_editor_absoluteX="34dp"
-                tools:layout_editor_absoluteY="363dp" />
+                android:onClick="Clicked" />
 
-            <CheckBox
-                android:id="@+id/eyesBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/eyes"
-                android:onClick="Clicked"
-                tools:layout_editor_absoluteX="34dp"
-                tools:layout_editor_absoluteY="397dp" />
-
-            <CheckBox
-                android:id="@+id/glassesBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/glasses"
-                android:onClick="Clicked"
-                tools:layout_editor_absoluteX="34dp"
-                tools:layout_editor_absoluteY="429dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -176,49 +157,60 @@
             android:orientation="vertical" >
 
             <CheckBox
+                android:id="@+id/eyesBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/eyes"
+                android:onClick="Clicked" />
+
+            <CheckBox
+                android:id="@+id/glassesBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/glasses"
+                android:onClick="Clicked" />
+
+            <CheckBox
                 android:id="@+id/hatBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/hat"
-                android:onClick="Clicked"
-                tools:layout_editor_absoluteX="34dp"
-                tools:layout_editor_absoluteY="462dp" />
+                android:onClick="Clicked" />
 
             <CheckBox
                 android:id="@+id/mouthBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/mouth"
-                android:onClick="Clicked"
-                tools:layout_editor_absoluteX="198dp"
-                tools:layout_editor_absoluteY="331dp" />
+                android:onClick="Clicked" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
             <CheckBox
                 android:id="@+id/mustacheBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/mustache"
-                android:onClick="Clicked"
-                tools:layout_editor_absoluteX="198dp"
-                tools:layout_editor_absoluteY="363dp" />
+                android:onClick="Clicked" />
 
             <CheckBox
                 android:id="@+id/noseBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nose"
-                android:onClick="Clicked"
-                tools:layout_editor_absoluteX="198dp"
-                tools:layout_editor_absoluteY="405dp" />
+                android:onClick="Clicked" />
 
             <CheckBox
                 android:id="@+id/shoesBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/shoes"
-                android:onClick="Clicked"
-                tools:layout_editor_absoluteX="198dp"
-                tools:layout_editor_absoluteY="437dp" />
+                android:onClick="Clicked" />
 
         </LinearLayout>
 
@@ -228,6 +220,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:orientation="vertical"
         android:gravity="center_horizontal" >
 
